--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>    
    <div class="container">
-      <h1><i class="fa fa-twitter"></i> Tweeter Sentiment</h1>
+      <h1><i class="fa fa-twitter"></i> Tweet Sentiment</h1>
     
       <div class="input-field">
          <i class="fa fa-user fa-2x prefix" aria-hidden="true"></i>
